May. 1. 2022 (B. InSung)
- Sunday and May is start!
- Visible Layer에서 Hidden Layer로 이동하는 도중에 오류발생
    - RuntimeError: The expanded size of the tensor (1) must match the existing size (10) at non-singleton dimension 1.  Target sizes: [1, 1].  Tensor sizes: [10]

Apr. 30. 2022 (B. InSung)
- Saturday Session Start!
- 아예 새롭게 RBM 모델을 세움. 
    - 어차피 BBRBM (RBM) -> GBRBM 으로 제작하면 되니 BBRBM이 성공하면 확률분포만 Gaussian으로 바꾸면 된다 라는게 나의 생각.

Apr. 29. 2022 (B. InSung)
- Friday Session Start.
- GBRBM 에서 BBRBM와 같은 오류가 발생함.
    - RuntimeError: The size of tensor a (180) must match the size of tensor b (80) at non-singleton dimension 1.
    - Dimension unmatching 오류 발생.
    - torch.flatten 을 통해 dimension을 0으로 통합하면 80 * 180 으로 된 텐서는 14400 * 1 텐서로 변형됨.
      텐서 사이즈가 맞지 않아 오류 발생.
- p_h_given_v matmul dimension 오류
    - 현저히 같은 이슈. weight와 visible layer 의 input에서 tensor size가 맞지 않아서 충돌이 발생함.
    - 180 * 80 mul 180 * 80
          ^---w        ^---v
    - torch.matmul을 통해서 사이즈를 맞춰줌. 허나, 이유는 모르겠으나 180 * 80와 80 * 180 사이즈 텐서를 넣었는데 (180 * 180) * (80 * 1) 텐서로 들어감.
    - 수학적인 연산에 대한 내용으로 추측됨. 혹여 모를 사태를 대비해 일단 또 커밋. 멘탈이 나가면 안되닌까..
    
Apr. 28. 2022 (B. InSung)
- Drunk night session...
- GBRBM 에서 오류 발생
    - RuntimeError: The size of tensor a (180) must match the size of tensor b (80) at non-singleton dimension 1
    - size의 unmatching 귀찮으니 내일의 나를 믿어야지.

Apr. 27. 2022 (B. InSung)
- Wensday Session Start... but feels like Tuesday...
- BBRBM sample_h_given_v 의 return 값 오류발생
    - RuntimeError: mat1 and mat2 shapes cannot be multiplied (1x80 and 14400x14400)
- 개발자 본인 지금 몬스터 마시고 밤샘을 달리는중.
    - changes에 의미가 있을지 모르겠으니 일단 뭐라도 적는다. 지금 bbrbm에서 안되거든? 일단 어캐든 잘 고쳐보는데 v_data가 길이가 안 맞는거임. 그러니 그거 맞춰주셈.
    - 14400 * 14400 으로 되어있다. 코드도 여기 있음
```
def p_h_given_v(self, v):
        index_tensor = torch.Tensor.long(torch.ones(self.vis_num, 0))
        w_t = (self.w.t().clone()).scatter_(0, index_tensor, (self.w.t().clone())).unsqueeze(1)
        v = (v.clone()).view(1, self.vis_num)